    STARPU_SPECIFIC_NODE_SLOW as generic values for codelet specific memory
    nodes which can be used instead of exact node numbers.
  * Add starpu_get_next_bindid and starpu_bind_thread_on to allow binding an
    application-started thread on a free core. Use it in StarPU-MPI to
    automatically bind the MPI thread on an available core.

Small features:
  * Scheduling contexts may now be associated a user data pointer at creation
    time, that can later be recalled through starpu_sched_ctx_get_user_data().
  * Add STARPU_SIMGRID_TASK_SUBMIT_COST and STARPU_SIMGRID_FETCHING_INPUT_COST
    to simulate the cost of task submission and data fetching in simgrid mode.
    This provides more accurate simgrid predictions, especially for the
    beginning of the execution and regarding data transfers.
  * STARPU_SIMGRID_SCHED_COST to take into account the time to perform scheduling
    when running in SimGrid mode.
  * New configure option --enable-mpi-pedantic-isend (disabled by
    default) to acquire data in STARPU_RW (instead of STARPU_R) before
    performing MPI_Isend call
  * New function starpu_worker_display_names to display the names of
    all the workers of a specified type.
  * Arbiters now support concurrent read access.
  * Add a field starpu_task::where similar to starpu_codelet::where
    which allows to restrict where to execute a task. Also add
    STARPU_TASK_WHERE to be used when calling starpu_task_insert().
  * Add SubmitOrder trace field.
  * Add workerids and workerids_len task fields.
  * Add priority management to StarPU-MPI. Can be disabled with
    the STARPU_MPI_PRIORITIES environment variable.
  * Add STARPU_MAIN_THREAD_CPUID and STARPU_MPI_THREAD_CPUID environment
    variables.
  * Add disk to disk copy functions and support asynchronous full read/write
    in disk backends.
  * New starpu_task_insert parameter STARPU_CL_ARGS_NFREE which allows
    to set codelet parameters but without freeing them.